@@ -1335,6 +1335,7 @@ PANOPTICON_SYSCONFIG_LBL_FIELD_PROXY_NO="Do Not Proxy These Domains"
 PANOPTICON_SYSCONFIG_LBL_FIELD_PROXY_NO_HELP="Enter a comma–separated list of full, or partial domain names which should not go through the proxy, e.g. <code>www.example.com, .mit.edu, .dev</code>."
 PANOPTICON_SYSCONFIG_LBL_FIELD_FINISHED_SETUP="Is installing Panopticon finished?"
 PANOPTICON_SYSCONFIG_LBL_FIELD_BEHIND_LOAD_BALANCER="Behind load balancer / reverse proxy"
+PANOPTICON_SYSCONFIG_LBL_FIELD_BEHIND_LOAD_BALANCER_HELP="Only enable if your installation is behind a non-transparent proxy (e.g. Varnish), load balancer (e.g. HAProxy), CDN (e.g. CloudFlare), or security service (e.g. Sucuri) which conveys the real IP address of the visitor through the HTTP header <code>X-Forwarded-For</code>."
 PANOPTICON_SYSCONFIG_LBL_FIELD_SESSION_ENCRYPT="Encrypt session data"
 PANOPTICON_SYSCONFIG_LBL_FIELD_SESSION_ENCRYPT_HELP="Session data will be stored on disk encrypted with a secret key unique to your Panopticon installation."
 PANOPTICON_SYSCONFIG_LBL_FIELD_SESSION_SAVE_LEVELS="Session Path Levels"
